--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@svgr/webpack": "^6.2.1",
-    "babel-plugin-styled-components": "^2.0.6",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -22,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "babel-plugin-styled-components": "^2.0.7"
   }
 }
