--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "babel-plugin-styled-components": "^2.0.7"
+    "eslint-config-next": "12.1.0"
   }
 }
