--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@mantine/carousel": "^5.3.0",
+    "@mantine/core": "^5.3.0",
+    "@mantine/hooks": "^5.3.0",
     "@material-ui/core": "^4.12.3",
     "@svgr/webpack": "^6.2.1",
+    "embla-carousel-react": "^7.0.2",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -20,8 +25,8 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
-    "babel-plugin-styled-components": "^2.0.7"
+    "eslint-config-next": "12.1.0"
   }
 }
