--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "embla-carousel-react": "^7.0.2",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-device-detect": "^2.2.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.34.0",
     "styled-components": "^5.3.3"
   },
