--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@svgr/webpack": "^6.2.1",
     "embla-carousel-react": "^7.0.2",
     "framer-motion": "^6.2.8",
-    "next": "12.1.0",
-    "react": "^18.0.2",
+    "next": "^12.3.0",
+    "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
-    "react-dom": "^18.0.2",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^8.34.0",
     "styled-components": "^5.3.3"
   },
