--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint": "^8.11.0",
+    "eslint-config-next": "^12.1.0"
   }
 }
