--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
+    "@emotion/server": "^11.10.0",
     "@mantine/carousel": "^5.3.0",
     "@mantine/core": "^5.3.0",
     "@mantine/hooks": "^5.3.0",
+    "@mantine/next": "^5.3.0",
     "@material-ui/core": "^4.12.3",
     "@svgr/webpack": "^6.2.1",
     "embla-carousel-react": "^7.0.2",
