--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^8.34.0",
+    "react-no-ssr": "^1.1.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
